add both nonspawner tables with 2 M models

--- a/Appendices.Rmd
+++ b/Appendices.Rmd
@@ -43,9 +43,17 @@ cat("\\clearpage")
 cat("\\clearpage")
 ```
 
-```{r child = 'Table App B nonspawner covariates.Rmd'}
+```{r child = 'Table App B nonspawner covariates M with S2.Rmd'}
 ```
 
+#
+
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
+```{r child = 'Table App B nonspawner covariates M wo S2.Rmd'}
+```
 #
 
 ```{r, results="asis", echo=FALSE}
