--- a/Table App B nonspawner covariates M wo S2.Rmd
+++ b/Table App B nonspawner covariates M wo S2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Non-Spawner (Oct-May Catch) Covariates Analysis"
+title: "Post-Monsoon (Oct-May) Catch Covariates Analysis"
 output:
   pdf_document: default
   word_document: default
@@ -11,7 +11,7 @@ Generic setup code common across all Rmds; run code in setup.Rmd if not knitting
 ```{r child = 'setup.Rmd'}
 ```
 
-```{r table-appB-nspawner-dat, echo=FALSE}
+```{r table-appBM2-nspawner-dat, echo=FALSE}
 #dat.nonspawners defined in setup.Rmd
 dat=dat.nonspawners
 Yr1 = min(dat$Year)
@@ -22,7 +22,7 @@ Yr2 = max(dat$Year)
 NE=mean(abs(dat$nspawners0-dat$nspawners1))
 ```
 
-```{r table-appB-nspawner-precip, echo=FALSE}
+```{r table-appBM2-nspawner-precip, echo=FALSE}
 #set up table
 seltable = data.frame(
   Model=paste("base model (M) ", Yr1,"-", Yr2, " data", sep=""), 
@@ -166,12 +166,12 @@ seltable=rbind(seltable,tmp1)
 seltable=seltable[1:(dim(seltable)[1]-1),]
 ```
 
-```{r print-tableAppB-precip, echo=FALSE}
+```{r print-tableappBM2-precip, echo=FALSE}
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste("Model selection tests of GPCP precipitation as an explanatory variable for the catch ($N_t$) during post-monsoon months (Oct-May) using", Yr1, "to", Yr2,  "data.  The data range is determined by the years for which SST was available in order to use a consistent dataset across covariate tests.  The base model (M) with prior catch dependency was selected independently (Appendix A). To the base model, covariates are added.  $V_t$ is the covariate in the calendar year, and $V_{t-1}$ is the covariate in the prior calendar year. The specific hypothesis (Table ", ref("tab:hypotheses"), ") being tested is noted in parentheses. The models are tested as nested sets.  Thus 1, 2a, 3a is a set and 1, 2b, 3b is another set.")
-fullcap=paste("Table ", ref("tabappB:nspawner-model-precip", pre="B"), ". ", thecap, sep="")
+thecap=paste("Model selection tests of GPCP precipitation as an explanatory variable for the catch ($N_t$) during post-monsoon months (Oct-May) using", Yr1, "to", Yr2,  "data.  The data range is determined by the years for which SST was available in order to use a consistent dataset across covariate tests.  The base model (M) with prior catch dependency was selected independently (Appendix A). In the Appendix C tables, the 2nd best model is used. This model is simpler than the best model (based on AIC) and uses only $N_{t-1}$. To the base model, covariates are added.  $V_t$ is the covariate in the calendar year, and $V_{t-1}$ is the covariate in the prior calendar year. The specific hypothesis (Table ", ref("tab:hypotheses"), ") being tested is noted in parentheses. The models are tested as nested sets.  Thus 1, 2a, 3a is a set and 1, 2b, 3b is another set. MASE is the mean absolute square error (residuals).")
+fullcap=paste("Table ", ref("tabappB:nspawner-model-precipM2", pre="B"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
 ```
 
@@ -180,7 +180,7 @@ cat("\\clearpage")
 ```
 
 
-```{r table-appB-spawner-sst, echo=FALSE}
+```{r table-appBM2-spawner-sst, echo=FALSE}
 ########### SST TEST 
 #set up table
 seltable = data.frame(
@@ -378,12 +378,12 @@ seltable=rbind(seltable,tmp1)
 seltable=seltable[1:(dim(seltable)[1]-1),]
 ```
 
-```{r print-tableAppB-sst, echo=FALSE}
+```{r print-tableappBM2-sst, echo=FALSE}
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste0("Model selection tests of average sea surface temperature off the Kerala coast (up to 80km offshore in boxes 2-5 in Figure 1) as the explanatory variable ($V_t$) for the catch during post-monsoon months (Oct-May) using ", Yr1," to ", Yr2, " data.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. See Table ", ref("tabappB:nspawner-model-precip", pre="B"), " for an explanation of the models.")
-fullcap=paste("Table ", ref("tabappB:nspawner-model-sst", pre="B"), ". ", thecap, sep="")
+thecap=paste0("Model selection tests of average sea surface temperature off the Kerala coast (up to 80km offshore in boxes 2-5 in Figure 1) as the explanatory variable ($V_t$) for the catch during post-monsoon months (Oct-May) using ", Yr1," to ", Yr2, " data.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. See Table ", ref("tabappB:nspawner-model-precipM2", pre="B"), " for an explanation of the models.")
+fullcap=paste("Table ", ref("tabappB:nspawner-model-sstM2", pre="B"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
 ```
 
@@ -392,7 +392,7 @@ cat("\\clearpage")
 ```
 
 
-```{r table-appB-spawner-upw, echo=FALSE}
+```{r table-appBM2-spawner-upw, echo=FALSE}
 ## UPWELLING TEST
 #set up table
 seltable = data.frame(
@@ -536,11 +536,11 @@ seltable=rbind(seltable,tmp1)
 seltable=seltable[1:(dim(seltable)[1]-1),]
 ```
 
-```{r print-tableAppB-upw, echo=FALSE}
+```{r print-tableappBM2-upw, echo=FALSE}
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste("Model selection tests of upwelling intensity off Cochi as the explanatory variable.  See Table", ref("tabappB:nspawner-model-precip", pre="B"), "for an explanation of the models. Two upwelling indices were tested. The nearshore-offshore temperature diferential (UPW), which is the offshore (box 13) minus nearshore (box 4) SST, and the average nearshore SST along the Kerala coast (boxes 2-5). These are highly correlated but not identical.")
-fullcap=paste("Table ", ref("tabappB:nspawner-model-upw", pre="B"), ". ", thecap, sep="")
+thecap=paste("Model selection tests of upwelling intensity off Cochi as the explanatory variable.  See Table", ref("tabappB:nspawner-model-precipM2", pre="B"), "for an explanation of the models. Two upwelling indices were tested. The nearshore-offshore temperature diferential (UPW), which is the offshore (box 13) minus nearshore (box 4) SST, and the average nearshore SST along the Kerala coast (boxes 2-5). These are highly correlated but not identical.")
+fullcap=paste("Table ", ref("tabappB:nspawner-model-upwM2", pre="B"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
 ```
