--- a/Table App B spawner covariates.Rmd
+++ b/Table App B spawner covariates.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Spawner (Jul-Sep Catch) Covariates Analysis"
+title: "Monsoon (Jul-Sep) Catch Covariates Analysis"
 output:
   pdf_document: default
   word_document: default
@@ -104,15 +104,17 @@ tmp1=data.frame(
   AIC = round(AIC(get(mod)), digits=2))
 seltable=rbind(seltable,tmp1)
 
+# Comment out since S1 and S2 hyps do not involve prior year
+# but rather exposure of fish to fishery
 # #model 4
 # i=4; mod=paste("m",i,sep="")
 # aa = summary(get(mod))
 # tmp1=data.frame(
-#   Model="4. $ln(S_t)$ = M + $s(V_t)$ + $\\beta V_{t-1}$", 
-#   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
-#   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
-#   Adj.R2=100*round(aa$r.sq, digits=3), 
-#   F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
+#   Model="4. $ln(S_t)$ = M + $s(V_t)$ + $\\beta V_{t-1}$",
+#   Residual.df=round(a[["Resid. Df"]][i],digits=1),
+#   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3),
+#   Adj.R2=100*round(aa$r.sq, digits=3),
+#   F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3),
 #   AIC = round(AIC(get(mod)), digits=2))
 # seltable=rbind(seltable,tmp1)
 # 
@@ -120,11 +122,11 @@ seltable=rbind(seltable,tmp1)
 # i=5; mod=paste("m",i,sep="")
 # aa = summary(get(mod))
 # tmp1=data.frame(
-#   Model="5. $ln(S_t)$ = M + $s(V_t)$ + $s(V_{t-1})$", 
-#   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
-#   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
-#   Adj.R2=100*round(aa$r.sq, digits=3), 
-#   F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
+#   Model="5. $ln(S_t)$ = M + $s(V_t)$ + $s(V_{t-1})$",
+#   Residual.df=round(a[["Resid. Df"]][i],digits=1),
+#   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3),
+#   Adj.R2=100*round(aa$r.sq, digits=3),
+#   F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3),
 #   AIC = round(AIC(get(mod)), digits=2))
 # seltable=rbind(seltable,tmp1)
 
@@ -140,7 +142,7 @@ seltable=seltable[1:(dim(seltable)[1]-1),]
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste("Model selection tests of GPCP precipitation as an explanatory variable for the catch during spawning months (Jul-Sep) using", Yr1, "to", Yr2,  "data.  The data range is determined by the years for which SST was available in order to use a consistent dataset across covariate tests.  $S_t$ is the catch during Jul-Sep of fishing season $t$.  $V_t$ is the covariate in same calendar year as the Jul-Sep catch.")
+thecap=paste("Model selection tests of GPCP precipitation as an explanatory variable for the catch $S_t$ during spawning months (Jul-Sep) using", Yr1, "to", Yr2,  "data.  The data range is determined by the years for which SST was available in order to use a consistent dataset across covariate tests.  The base model (M) with prior catch dependency was selected independently (Appendix A). To the base model, covariates are added. $V_t$ is the covariate in same calendar year as the Jul-Sep catch. The specific hypothesis (Table ", ref("tab:hypotheses"), ") being tested is noted in parentheses. The models are tested as nested sets.  Thus 1, 2a, 3a is a set and 1, 2b, 3b is another set. MASE is the mean absolute square error (residuals).")
 fullcap=paste("Table ", ref("tabappB:spawner-model-precip", pre="B"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
 ```
@@ -151,7 +153,7 @@ cat("\\clearpage")
 
 
 ```{r table-appB-spawner-sst, echo=FALSE}
-########### SST TEST 
+########### SST Hypotheses
 #set up table
 seltable = data.frame(
   Model=paste("base model (M) ", Yr1,"-", Yr2, " data", sep=""), 
@@ -213,8 +215,9 @@ dat$cov1=dat[[paste(covname, "1", sep="")]]
 m1 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=dat)
 m2 = gam(spawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
 m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
-m4 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
-a=anova(m1,m2,m3,m4, test="F")
+m4 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + cov1, data=dat)
+m5 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
+a=anova(m1,m2,m3,m4,m5, test="F")
 
 #model 2
 i=2; mod=paste("m",i,sep="")
@@ -240,8 +243,20 @@ tmp1=data.frame(
   AIC = round(AIC(get(mod)), digits=2))
 seltable=rbind(seltable,tmp1)
 
-#model 6
+#model 4
 i=4; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="4a. $ln(S_t)$ = M + $s(V_t)$ + $\beta V_{t-1}$", 
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
+  AIC = round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+#model 5
+i=5; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
   Model="4a. $ln(S_t)$ = M + $s(V_t)$ + $s(V_{t-1})$", 
@@ -301,7 +316,7 @@ for(covname in c("SST.2.10.mon10to12.")){
   if(covname=="SST.2.10.mon9to10.") covtit =  "$V_t$ = Ave Sep-Oct SST (L1)"
   if(covname=="SST.2.10.mon1to12.") covtit =  "$V_t$ = Ave Jan-Dec SST"
   if(covname=="SST.2.10.mon10to12.") covtit =  "$V_t$ = Ave Oct-Dec SST (L1)"
-  if(covname=="SST.2.10.mon3to5.") covtit =  "$V_t$ = Ave Mar-May SST (S4)"
+  if(covname=="SST.2.10.mon3to5.") covtit =  "$V_t$ = Ave Mar-May SST (S5)"
 
 #var header
 seltable = rbind(seltable, data.frame(Model=covtit, Residual.df="", MASE="", Adj.R2="", F="", p.value="", AIC="", stringsAsFactors=FALSE))
@@ -350,7 +365,7 @@ seltable=seltable[1:(dim(seltable)[1]-1),]
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste0("Model selection tests of average sea surface temperature off the Kerala coast (up to 80km offshore in boxes 2-5 in Figure 1) as the explanatory variable ($V_t$) for the catch during spawning months (Jul-Sep) using ", Yr1," to ", Yr2, " data.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. See Table ", ref("tabappB:spawner-model-precip", pre="B"), " for an explanation of the models.")
+thecap=paste0("Model selection tests of average sea surface temperature off the Kerala coast (up to 80km offshore in boxes 2-5 in Figure 1) as the explanatory variable ($V_t$) for the catch during monsoon months (Jul-Sep) using ", Yr1," to ", Yr2, " data.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. See Table ", ref("tabappB:spawner-model-precip", pre="B"), " for an explanation of the models.")
 fullcap=paste("Table ", ref("tabappB:spawner-model-sst", pre="B"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
 ```
@@ -412,8 +427,9 @@ dat$cov1=dat[[paste(covname, "1", sep="")]]
 m1 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=dat)
 m2 = gam(spawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
 m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
-m4 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
-a=anova(m1,m2,m3,m4, test="F")
+m4 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + cov1, data=dat)
+m5 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
+a=anova(m1,m2,m3,m4,m5, test="F")
 
 #model 2
 i=2; mod=paste("m",i,sep="")
@@ -439,8 +455,20 @@ tmp1=data.frame(
   AIC = round(AIC(get(mod)), digits=2))
 seltable=rbind(seltable,tmp1)
 
-#model 6
+#model 4
 i=4; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="4a. $ln(S_t)$ = M + $s(V_t)$ + $\beta V_{t-1}$", 
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
+  AIC = round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+#model 5
+i=5; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
   Model="4a. $ln(S_t)$ = M + $s(V_t)$ + $s(V_{t-1})$", 
@@ -494,7 +522,7 @@ seltable=seltable[1:(dim(seltable)[1]-1),]
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste("Model selection tests of upwelling intensity off Cochi as the explanatory variable.  See Table", ref("tabappB:spawner-model-precip", pre="B"), "for an explanation of the models. Two upwelling indices were tested. The nearshore-offshore temperature diferential (UPW), which is the offshore (box 13) minus nearshore (box 4) SST, and the average nearshore SST along the Kerala coast (boxes 2-5). These are highly correlated but not identical.")
+thecap=paste("Model selection tests of upwelling intensity off Cochi as the explanatory variable.  See Table", ref("tabappB:spawner-model-precip", pre="B"), "for an explanation of the models. Two upwelling indices were tested. The nearshore-offshore temperature differential (UPW), which is the offshore (box 13) minus nearshore (box 4) SST, and the average nearshore SST along the Kerala coast (boxes 2-5). These are highly correlated but not identical. Larger (and positive) UPW indicates stronger upwelling (offshore warmer than nearshore) while smaller SST (during monsoon months) indicates stronger upwelling.")
 fullcap=paste("Table ", ref("tabappB:spawner-model-upw", pre="B"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
 ```
